Move all event handling into one class